--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
 .header{
     position: relative;
     height: 95vh;
-    background-image: linear-gradient(to right bottom, #7ed56fe8, #28b485e8), url(../img/hero.jpg);
+    background-image: linear-gradient(to right bottom, #7ed56fb2, #28b485ab), url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
@@ -39,4 +39,31 @@ body{
 
 .logo {
     height: 35px;
+}
+
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+0}
+
+.heading-primary-main {
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+
 }
