Building Complex Buttons

--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,14 @@ body{
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
+    margin-bottom: 54px;
 }
 
 .heading-primary-main {
@@ -100,4 +102,29 @@ body{
         opacity: 1;
         transform: translate(0);
     }
+}
+
+.btn:link, 
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 300px;
+    transition: all .2s;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 14px 24px rgba(0,0,0,0.2);
+}
+
+.btn:active {
+    transform: translate(-1px);
+    box-shadow: 0 7px 14px rgba(0,0,0,0.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
